--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistem Kasir Toko Celana - Centralized Notif</title>
+    <title>Sistem Kasir Toko Celana - Google Sheets Edition</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,7 +45,7 @@
   <body>
     <div class="container py-5">
       <h2 class="text-center mb-4 fw-bold text-uppercase">
-        Manajemen Stok Toko Celana
+        Manajemen Stok (Cloud Google Sheets)
       </h2>
 
       <div class="card mb-5 shadow-sm">
@@ -125,7 +125,7 @@
                 class="btn btn-primary w-100 fw-bold py-2"
                 id="btnAction"
               >
-                SIMPAN DATA PRODUK
+                SIMPAN DATA KE GOOGLE SHEETS
               </button>
               <button
                 type="button"
@@ -157,7 +157,13 @@
                   <th class="text-center">Aksi</th>
                 </tr>
               </thead>
-              <tbody id="produkTable"></tbody>
+              <tbody id="produkTable">
+                <tr>
+                  <td colspan="9" class="text-center py-4 text-muted">
+                    Memuat data dari Google Sheets...
+                  </td>
+                </tr>
+              </tbody>
             </table>
           </div>
         </div>
@@ -165,13 +171,10 @@
     </div>
 
     <script>
-      /* TIPS: Jika ingin buka di HP, ganti 'localhost' 
-       dengan IP Laptop Anda (contoh: 192.168.1.15)
-    */
-      const API_URL = "http://localhost:5000/produk";
+      // URL API SheetDB kamu
+      const API_URL = "https://sheetdb.io/api/v1/g4r4f2kjg6k0q";
       let isEdit = false;
 
-      // Helper: Notifikasi Tengah (SweetAlert2)
       const notifyCenter = (icon, title, text) => {
         Swal.fire({
           icon: icon,
@@ -192,36 +195,43 @@
           const tableBody = document.getElementById("produkTable");
           tableBody.innerHTML = "";
 
+          if (res.data.length === 0) {
+            tableBody.innerHTML = `<tr><td colspan="9" class="text-center py-4">Belum ada data di Google Sheets.</td></tr>`;
+            return;
+          }
+
           res.data.forEach((p) => {
             tableBody.innerHTML += `
-                    <tr>
-                        <td class="ps-3 fw-bold text-dark">${p.nama_model}</td>
-                        <td>${p.merek}</td>
-                        <td>${p.jenis_bahan || "-"}</td>
-                        <td><span class="badge bg-secondary badge-size">${
-                          p.ukuran || "-"
-                        }</span></td>
-                        <td>${p.tipe_fit || "-"}</td>
-                        <td>${p.warna || "-"}</td>
-                        <td class="text-success fw-bold">Rp ${Number(
-                          p.harga
-                        ).toLocaleString("id-ID")}</td>
-                        <td>${p.stok} pcs</td>
-                        <td class="text-center">
-                            <div class="btn-group" role="group">
-                                <button class="btn btn-sm btn-warning" onclick='editData(${JSON.stringify(
-                                  p
-                                )})'>Edit</button>
-                                <button class="btn btn-sm btn-danger" onclick="hapusData(${
-                                  p.id
-                                }, '${p.nama_model}')">Hapus</button>
-                            </div>
-                        </td>
-                    </tr>`;
+                <tr>
+                    <td class="ps-3 fw-bold text-dark">${p.nama_model}</td>
+                    <td>${p.merek}</td>
+                    <td>${p.jenis_bahan || "-"}</td>
+                    <td><span class="badge bg-secondary badge-size">${
+                      p.ukuran || "-"
+                    }</span></td>
+                    <td>${p.tipe_fit || "-"}</td>
+                    <td>${p.warna || "-"}</td>
+                    <td class="text-success fw-bold">Rp ${Number(
+                      p.harga
+                    ).toLocaleString("id-ID")}</td>
+                    <td>${p.stok} pcs</td>
+                    <td class="text-center">
+                        <div class="btn-group" role="group">
+                            <button class="btn btn-sm btn-warning" onclick='prepEdit(${JSON.stringify(
+                              p
+                            )})'>Edit</button>
+                            <button class="btn btn-sm btn-danger" onclick="hapusData('${
+                              p.id
+                            }', '${p.nama_model}')">Hapus</button>
+                        </div>
+                    </td>
+                </tr>`;
           });
         } catch (err) {
-          console.error("Gagal koneksi ke Backend.");
-          // Jangan munculkan alert di sini agar tidak spam saat server mati
+          console.error("Gagal koneksi ke SheetDB.");
+          document.getElementById(
+            "produkTable"
+          ).innerHTML = `<tr><td colspan="9" class="text-center text-danger">Gagal memuat data. Cek API Key.</td></tr>`;
         }
       }
 
@@ -230,6 +240,10 @@
         .getElementById("produkForm")
         .addEventListener("submit", async (e) => {
           e.preventDefault();
+
+          const btn = document.getElementById("btnAction");
+          btn.disabled = true;
+          btn.innerText = "SEDANG MEMPROSES...";
 
           const payload = {
             nama_model: document.getElementById("nama_model").value,
@@ -245,18 +259,21 @@
           try {
             if (isEdit) {
               const id = document.getElementById("prodId").value;
-              await axios.put(`${API_URL}/${id}`, payload);
+              // UPDATE: SheetDB menggunakan PATCH/PUT dengan pencarian kolom
+              await axios.patch(`${API_URL}/id/${id}`, { data: payload });
               notifyCenter(
                 "success",
                 "Update Berhasil!",
-                "Data produk telah diperbarui."
+                "Data di Google Sheets telah diperbarui."
               );
             } else {
-              await axios.post(API_URL, payload);
+              // INSERT: Menambahkan ID unik (timestamp) agar bisa di-edit/hapus nanti
+              payload.id = Date.now().toString();
+              await axios.post(API_URL, { data: [payload] });
               notifyCenter(
                 "success",
                 "Simpan Berhasil!",
-                "Produk baru telah ditambahkan."
+                "Data telah masuk ke Google Sheets."
               );
             }
             resetForm();
@@ -264,24 +281,24 @@
           } catch (err) {
             Swal.fire(
               "Gagal!",
-              "Pastikan Backend menyala & Database terhubung.",
+              "Gagal menghubungi Google Sheets API.",
               "error"
             );
+          } finally {
+            btn.disabled = false;
           }
         });
 
-      // 3. Masuk Mode Edit (Mengisi Form)
-      function editData(p) {
+      // 3. Persiapan Edit
+      function prepEdit(p) {
         isEdit = true;
         document.getElementById("formTitle").innerText =
           "📝 Edit Produk: " + p.nama_model;
-
         const btnAction = document.getElementById("btnAction");
-        btnAction.innerText = "UPDATE DATA SEKARANG";
+        btnAction.innerText = "UPDATE KE GOOGLE SHEETS";
         btnAction.className = "btn btn-update w-100 fw-bold py-2";
         document.getElementById("btnBatal").classList.remove("d-none");
 
-        // Isi Form
         document.getElementById("prodId").value = p.id;
         document.getElementById("nama_model").value = p.nama_model;
         document.getElementById("merek").value = p.merek;
@@ -293,51 +310,36 @@
         document.getElementById("stok").value = p.stok;
 
         window.scrollTo({ top: 0, behavior: "smooth" });
-        notifyCenter(
-          "info",
-          "Mode Edit Aktif",
-          "Ubah data pada kolom di atas."
-        );
       }
 
-      // 4. Reset Form (Kembali ke mode Tambah)
+      // 4. Reset Form
       function resetForm() {
         isEdit = false;
         document.getElementById("produkForm").reset();
         document.getElementById("formTitle").innerText =
           "📦 Tambah Produk Baru";
-
         const btnAction = document.getElementById("btnAction");
-        btnAction.innerText = "SIMPAN DATA PRODUK";
+        btnAction.innerText = "SIMPAN DATA KE GOOGLE SHEETS";
         btnAction.className = "btn btn-primary w-100 fw-bold py-2";
-
         document.getElementById("btnBatal").classList.add("d-none");
-        document.getElementById("prodId").value = "";
       }
 
       // 5. Fungsi Hapus (DELETE)
       async function hapusData(id, nama) {
         Swal.fire({
           title: "Hapus Data?",
-          text: `Anda akan menghapus "${nama}" selamanya!`,
+          text: `Hapus "${nama}" dari Google Sheets?`,
           icon: "warning",
           showCancelButton: true,
           confirmButtonColor: "#d33",
-          cancelButtonColor: "#3085d6",
           confirmButtonText: "Ya, Hapus!",
-          cancelButtonText: "Batal",
         }).then(async (result) => {
           if (result.isConfirmed) {
             try {
-              await axios.delete(`${API_URL}/${id}`);
+              // Hapus berdasarkan kolom 'id'
+              await axios.delete(`${API_URL}/id/${id}`);
               loadData();
-              Swal.fire({
-                icon: "success",
-                title: "Terhapus!",
-                text: "Data berhasil dihilangkan dari sistem.",
-                timer: 1500,
-                showConfirmButton: false,
-              });
+              Swal.fire("Terhapus!", "Data berhasil dihapus.", "success");
             } catch (err) {
               Swal.fire("Error!", "Gagal menghapus data.", "error");
             }
@@ -345,7 +347,6 @@
         });
       }
 
-      // Jalankan load data saat pertama kali buka halaman
       loadData();
     </script>
   </body>
